# scp_stage1

./: .gitignore  Dockerfile  Makefile  README.md  experiments.md  pyproject.toml  spike_analysis.py  spike_preview.txt
configs/: data.yaml  data_ko_no_namu.yaml  data_ko_only.yaml  data_no_namu.yaml  stage1.yaml  stage1_gemma.yaml  stage1_gemma_ko_no_namu.yaml  stage1_gemma_ko_only.yaml  stage1_gemma_no_namu.yaml  stage1_gemma_run7_repro.yaml  stage1_no_deltanet.yaml  stage1_qwen_no_namu.yaml  stage1_qwen_no_namu_lr2x_nollrd.yaml
notebooks/: train.ipynb
src/: config.py  evaluate.py  inspect_data.py  lm_eval_with_unsloth.py  merge.py  preprocess.py  train.py  utils.py
